conf.propDüzenlendi-Us06Classes

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,91 @@
 browser=chrome
 url=https://www.araskargo.com.tr/
 
+
+!--Muammer Saraç       20 dahil- 30 hariç satirlar
+!--Göksel Çelik         30 dahil- 40 hariç satirlar
+!--Gonca Lök            40 dahil- 50 hariç satirlar
+!--Sümeyye Geçici       50 dahil- 60 hariç satirlar
+!-- ?eyma Özçam         60 dahil- 70 hariç satirlar
+!--Mustafa Dalk?l?ç     70 dahil- 80 hariç satirlar
+!--Elif Kavcar          80 dahil - 90 hariç satirlar
+!--Alparslan ASLAN      90 dahil - 100 hariç satirlar
+
+!-- Arkadaslar satirlari kaydirmadan sizin için ayrilan satir araligina yazabilirseniz conflict yasamayiz.
+!-- Iyi çalismalar
+
+
+
+
+!--Muammer Saraç       20 dahil- 30 hariç satirlar
+
+
+
+
+
+
+
+
+
+!--Göksel Çelik         30 dahil- 40 hariç satirlar
+
+
+
+
+
+
+
+
+
+!--Gonca Lök            40 dahil- 50 hariç satirlar
+
+
+
+
+
+
+
+
+
+!--Sümeyye Geçici       50 dahil- 60 hariç satirlar
+
+
+
+
+
+
+
+
+
+!-- ?eyma Özçam         60 dahil- 70 hariç satirlar
+
+
+
+
+
+
+
+
+
+!--Mustafa Dalk?l?ç     70 dahil- 80 hariç satirlar
+
+
+
+
+
+
+
+
+
+!--Elif Kavcar          80 dahil - 90 hariç satirlar
+
+
+
+
+
+
+
+
+
+!--Alparslan ASLAN      90 dahil - 100 hariç satirlar
+
