25122023us06-us09_updated

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
 browser=chrome
 url=https://www.araskargo.com.tr/
-
+aras_url=https://www.araskargo.com.tr/
 
 !--Muammer Saraç       20 dahil- 30 hariç satirlar
 !--Göksel Çelik         30 dahil- 40 hariç satirlar
