--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,17 +1,26 @@
-#HTML REPORT
+#Extent Report
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/Spark.html
-extent.reporter.spark.config=src/test/resources/extent-config.xml
+extent.reporter.spark.out=Reports/Spark.html
 
-#PDF REPORT
+#PDF Report
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
+extent.reporter.pdf.out=PdfReport/ExtentPdf.pdf
 
-#SCREENSHOT PATH
-screenshot.dir=test-output/
-screenshot.rel.path=../
+#HTML Report
+extent.reporter.html.start=true
+extent.reporter.html.out=HtmlReport/ExtentHtml.html
 
-extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
+#FolderName
+basefolder.name=ExtentReports/SparkReport_
+basefolder.datetimepattern=d_MMM_YY HH_mm_ss
 
-#systeminfo.os=Mac
-systeminfo.os=Windows
+#Screenshot
+screenshot.dir=/Screenshots/
+screenshot.rel.path=../Screenshots/
+
+#Base64
+extent.reporter.spark.base64imagesrc=true
+
+#System Info
+systeminfo.os=windows
+systeminfo.version=10
