--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
+pom.xml
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
