--- a/configuration.properties
+++ b/configuration.properties
@@ -59,7 +59,7 @@ Eposta=alican@gmail.com
 
 !-- ?eyma Özçam         60 dahil- 70 hariç satirlar
 
-
+uyelik_url =https://esasweb.araskargo.com.tr/
 
 
 
